--- a/src/surforama/napari.yaml
+++ b/src/surforama/napari.yaml
@@ -1,7 +1,7 @@
 name: surforama
 display_name: Surforama
 # use 'hidden' to remove plugin from napari hub search results
-visibility: public
+visibility: hidden
 # see https://napari.org/stable/plugins/manifest.html for valid categories
 categories: ["Annotation", "Visualization"]
 contributions:
