--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,10 @@ install_requires =
     qtpy
     scikit-image
     trimesh
-    mrcfile    
+    mrcfile
+    typer
+    rich
+    starfile
 
 python_requires = >=3.8
 include_package_data = True
@@ -51,6 +54,8 @@ where = src
 [options.entry_points]
 napari.manifest =
     surforama = surforama:napari.yaml
+console_scripts =
+    surforama = surforama._cli:app
 
 [options.extras_require]
 testing =
