--- a/src/surforama/napari.yaml
+++ b/src/surforama/napari.yaml
@@ -1,13 +1,13 @@
 name: surforama
 display_name: Surforama
 # use 'hidden' to remove plugin from napari hub search results
-visibility: public
+visibility: hidden
 # see https://napari.org/stable/plugins/manifest.html for valid categories
 categories: ["Annotation", "Visualization"]
 contributions:
   commands:
     - id: surforama.make_widget
-      python_name: surforama:Surforama
+      python_name: surforama:QtSurforama
       title: Make Surforama
   widgets:
     - command: surforama.make_widget
