apply pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ url = https://github.com/cellcanvas/surforama
 author = Kyle Harrington
 author_email = surforama@kyleharrington.com
 license = MIT
+license_file = LICENSE
 license_files = LICENSE
 classifiers =
     Development Status :: 2 - Pre-Alpha
@@ -31,45 +32,40 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    numpy
     magicgui
-    qtpy
-    scikit-image
-    trimesh
     mrcfile
-    typer
+    numpy
+    qtpy
     rich
+    scikit-image
     starfile
-
+    trimesh
+    typer
 python_requires = >=3.8
 include_package_data = True
 package_dir =
     =src
 
-# add your package requirements here
-
 [options.packages.find]
 where = src
 
 [options.entry_points]
-napari.manifest =
-    surforama = surforama:napari.yaml
 console_scripts =
     surforama = surforama._cli:app
+napari.manifest =
+    surforama = surforama:napari.yaml
 
 [options.extras_require]
-testing =
-    tox
-    pytest  # https://docs.pytest.org/en/latest/contents.html
-    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
-    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
-    napari
-    pyqt5
-
 dev =
     %(testing)s
     pre-commit
-
+testing =
+    napari
+    pyqt5
+    pytest
+    pytest-cov
+    pytest-qt
+    tox
 
 [options.package_data]
 * = *.yaml
