--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ python_requires = >=3.8
 include_package_data = True
 package_dir =
     =src
+setup_requires = setuptools_scm
 
 [options.packages.find]
 where = src
