add obj file reader plugin

--- a/src/surforama/napari.yaml
+++ b/src/surforama/napari.yaml
@@ -12,10 +12,18 @@ contributions:
     - id: surforama.thylakoid
       python_name: surforama.data._datasets:_thylakoid_membrane_sample_data_plugin
       title: Thylakoid membrane
+    - id: surforama.mesh_reader
+      python_name: surforama.io._reader_plugin:mesh_reader_plugin
+      title: Mesh reader
   sample_data:
     - command: surforama.thylakoid
       key: thylakoid
       display_name: thylakoid membrane
+  readers:
+    - command: surforama.mesh_reader
+      filename_patterns:
+        - '*.obj'
+      accepts_directories: false
   widgets:
     - command: surforama.make_widget
       display_name: Surforama
