add covid sample data

--- a/src/surforama/napari.yaml
+++ b/src/surforama/napari.yaml
@@ -12,6 +12,9 @@ contributions:
     - id: surforama.thylakoid
       python_name: surforama.data._datasets:_thylakoid_membrane_sample_data_plugin
       title: Thylakoid membrane
+    - id: surforama.covid
+      python_name: surforama.data._datasets:_covid_membrane_sample_data_plugin
+      title: Covid virion membrane
     - id: surforama.mesh_reader
       python_name: surforama.io._reader_plugin:mesh_reader_plugin
       title: Mesh reader
@@ -19,6 +22,9 @@ contributions:
     - command: surforama.thylakoid
       key: thylakoid
       display_name: thylakoid membrane
+    - command: surforama.covid
+      key: covid
+      display_name: covid virion membrane
   readers:
     - command: surforama.mesh_reader
       filename_patterns:
