add docs requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,15 @@ napari.manifest =
 [options.extras_require]
 dev =
     %(testing)s
+    %(docs)s
     pre-commit
+
+docs =
+    mkdocs
+	mkdocs-material
+	mkdocstrings[python]
+	mkdocs-video
+
 testing =
     napari
     pyqt5
