--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -84,6 +84,13 @@ jobs:
         uses: aganders3/headless-gui@v2
         with:
           run: mkdocs build --strict
+      # deploy when pushing to main
+      - name: GitHub Pages action
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          deploy_key: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
 
   deploy:
     # this will run when you have tagged a commit, starting with "v*"
